; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_opendir.c_fdopendir.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_opendir.c_fdopendir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@F_SETFD = common dso_local global i32 0, align 4
@FD_CLOEXEC = common dso_local global i32 0, align 4
@DTF_HIDEW = common dso_local global i32 0, align 4
@DTF_NODUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @fdopendir(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @F_SETFD, align 4
  %6 = load i32, i32* @FD_CLOEXEC, align 4
  %7 = call i32 @_fcntl(i32 %4, i32 %5, i32 %6)
  %8 = icmp eq i32 %7, -1
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %16

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @DTF_HIDEW, align 4
  %13 = load i32, i32* @DTF_NODUP, align 4
  %14 = or i32 %12, %13
  %15 = call i32* @__opendir_common(i32 %11, i32 %14, i32 1)
  store i32* %15, i32** %2, align 8
  br label %16

16:                                               ; preds = %10, %9
  %17 = load i32*, i32** %2, align 8
  ret i32* %17
}

declare dso_local i32 @_fcntl(i32, i32, i32) #1

declare dso_local i32* @__opendir_common(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
